<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="team_logo_content_desc">Team Logo</string>
    <string name="loading_team_desc">Team Being Loaded</string>
    <string name="pull_to_update_desc">Puller</string>
    <string name="compare_content_desc">Compare</string>
    <string name="team_home_image_content_desc">Team Home Image</string>
    <string name="result_image_indicator_content_desc">Result Indicator</string>
    <string name="team_favorite_content_desc">Team Logo</string>
    <string name="team_twitter">Team Twitter</string>
    <string name="stats">Stats</string>
    <string name="next_match">Next Match</string>
    <string name="upcoming_match">Upcoming</string>
    <string name="on_going_match">LIVE</string>
    <string name="past_match">Past Match</string>
    <string name="games">games</string>
    <string name="won">won</string>
    <string name="draws">draws</string>
    <string name="loses">loses</string>
    <string name="goals_for">goals\nfor</string>
    <string name="goals_against">goals\nagainst</string>
    <string name="last_matches">Last Matches</string>
    <string name="compare">Compare</string>
</resources>